# MLOps

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  file.py  pyproject.toml
