[project]
name = "MLOps"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "ruff",      
    "pre-commit", 
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = ["E", "F", "I", "B", "C", "Q"]
ignore = ["E501"]
line-length = 88
target-version = "py312"